# wcpan.drive.cli

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: unittest.yaml
src/wcpan/drive/cli/: _cfg.py  _download.py  _interaction.py  _lib.py  _upload.py
src/wcpan/drive/cli/_cmd/: auth.py  download.py  lib.py  mkdir.py  move.py  remove.py  shell.py  sync.py  trash.py  upload.py
tests/: _lib.py  test_cmd_lib.py  test_interaction.py  test_main.py  test_queue.py  util.py
wcpan/drive/cli/: _download.py  _interaction.py  _lib.py  _queue.py  interaction.py  lib.py  main.py  queue_.py  util.py
wcpan/drive/cli/_cmd/: auth.py  find.py  list_.py  move.py  remove.py  shell.py  sync.py  trash.py  tree.py  upload.py  usage.py
